--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -15,9 +15,26 @@
                     <div id="clock"></div>
                     <div id="date"></div>
                 </div>
-                <div>
-                    <div id="cpuLoad"></div>
-                    <div id="ramLoad"></div>
+                <div class="hoverable">
+                    <div id="wifi">
+                        <i class="fas fa-wifi"></i>
+                        <ul id="wifi_details">
+                            <li>SSID: none</li>
+                            <li>Access Point: none</li>
+                            <li>Bit Rate: none</li>
+                            <li>Frequency: none</li>
+                            <li>Link Quality: none</li>
+                            <li>Nickname: none</li>
+                            <li>Noise Level: none</li>
+                            <li>Signal Level: none</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <i class="fas fa-microchip"></i> <span id="cpuLoad">0.0%</span>
+                    </div>
+                    <div>
+                        <i class="fas fa-memory"></i> <span id="ramLoad">0.0%</span>
+                    </div>
                 </div>
             </div>
             <div id="container">
@@ -25,7 +42,7 @@
                     <div id="myDiv">
 
                     </div>
-                    <div id="details">
+                    <!-- <div id="details">
                         Translation:<br>
                         x: 0<br>
                         y: 0<br>
@@ -41,7 +58,7 @@
                         pitch: 0<br>
                         yaw: 0<br>
                         winkel: 0<br>
-                    </div>
+                    </div> -->
                 </div>
                 <div id="deletes">
                     <h2>Known Cones</h2>
@@ -55,5 +72,6 @@
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
         <script src='https://cdn.plot.ly/plotly-2.16.1.min.js'></script>
         <script src="/script.js" defer></script>
+        <script src="https://kit.fontawesome.com/0b707a452a.js" crossorigin="anonymous"></script>
     </body>
 </html>
